hello-rancher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-rancher
  namespace: hello-rancher
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hello-rancher
  template:
    metadata:
      labels:
        app: hello-rancher
    spec:
      containers:
        - name: hello-rancher
          image: peteindockerhub/hello-rancher:1.0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            name: web
            protocol: TCP
          readinessProbe:
            httpGet:
              port: web
              path: /
